# anonymousproject

./: .gitignore  README.md  environment.yml  pyproject.toml
cpr/: __init__.py  bound.py  correlated_sampler.py  graphs.py  memorisation.py  monetary.py  payoff.py  payoff_coverage.py  payoff_powerflow.py  payoff_powerflow_ac.py  payoff_road_corridor.py  payoff_routing.py  regret.py  transport.py
cpr/_powergrid/: __init__.py
cpr/_powergrid/approaches/: __init__.py  common.py
cpr/_powergrid/demand/: __init__.py  profiles.py
cpr/_powergrid/evaluation/: __init__.py  powerflow.py
data/: README.md
experiments/: bootstrap_cross_payoff.py  bound_per_payoff.py  bound_stress_test.py  build_truth_graphs.py  capex_sensitivity.py  case_study_sao_paulo.py  fig_ac_dc_morphology.py  hierarchical_w1_demo.py  lipschitz_estimate.py  monetary_translation.py  per_city_breakout.py  per_city_spearman.py  road_corridor_cpr.py  robustness_battery.py  run_birchfield.py  run_birchfield_cpr.py  run_cpr_ac.py  run_cpr_panel.py  run_transfer_learning.py  visual_galleries.py
external_baselines/birchfield_2017/: __init__.py  build_graph.py
figures/: README.md
generators/graph_diffusion/: infer.py  infer_any_city.py  model_v2.py  train_v2.py  train_w1.py
paper/: README.md  main.tex
paper/tables/: capex_sensitivity.tex  cross_payoff_matrix.tex  cross_payoff_matrix_ci.tex  headline.tex  memorisation_summary.tex  model_taxonomy.tex  monetary_summary.tex
results/: README.md
